package service

import (
	pb "blog/proto/blog/v1"
	"context"
	"go.mongodb.org/mongo-driver/bson"
	"go.mongodb.org/mongo-driver/bson/primitive"
	"google.golang.org/grpc/codes"
	"google.golang.org/grpc/status"
	"log"
)

func (s *Server) ReadBlog(ctx context.Context, in *pb.ReadBlogRequest) (*pb.ReadBlogResponse, error) {
	log.Printf("ReadBlog was invoked with %v\n", in)
	oid, err := primitive.ObjectIDFromHex(in.Id)
	if err != nil {
		return nil, status.Errorf(codes.InvalidArgument, "Cannot Parse ID")
	}

	data := &BlogItem{}
	filter := bson.M{"_id": oid}

	res := s.BlogCollection.FindOne(ctx, filter)
	if err := res.Decode(data); err != nil {
		return nil, status.Errorf(codes.NotFound, "Cannot find blog with ID provided")
	}

	return &pb.ReadBlogResponse{
		Id:       data.ID.Hex(),
		AuthorId: data.AuthorID.Hex(),
		Title:    data.Title,
		Content:  data.Content}, nil
}
